fixed paths on an nav menu

--- a/allennella/mirrorDEMO/splashpage.html
+++ b/allennella/mirrorDEMO/splashpage.html
@@ -475,38 +475,38 @@
 	  </div>
 	  
 	  <div class="sidebar-nav-buttons">
-		<a href="../allennella/mirrordemo/splashpage.html" class="sidebar-nav-button">
-		  <img src="../assets/allen_btn.png" alt="Allen Nella" />
+		<a href="../../allennella/mirrordemo/splashpage.html" class="sidebar-nav-button">
+		  <img src="../../assets/allen_btn.png" alt="Allen Nella" />
 		</a>
 		<a href="../blueroan/home.html" class="sidebar-nav-button">
-		  <img src="../assets/blueroan_btn.png" alt="Blue Roan" />
+		  <img src="../../assets/blueroan_btn.png" alt="Blue Roan" />
 		</a>
 		<a href="../curtaincall/home.html" class="sidebar-nav-button">
-		  <img src="../assets/curtain_btn.png" alt="Curtain Call" />
+		  <img src="../../assets/curtain_btn.png" alt="Curtain Call" />
 		</a>
-		<a href="../mypetboy/home.html" class="sidebar-nav-button">
-		  <img src="../assets/boy_btn.png" alt="My Pet Boy" />
+		<a href="../../mypetboy/home.html" class="sidebar-nav-button">
+		  <img src="../../assets/boy_btn.png" alt="My Pet Boy" />
 		</a>
-		<a href="../growingminds/home.html" class="sidebar-nav-button">
-		  <img src="../assets/growing_btn.png" alt="Growing Minds" />
+		<a href="../../growingminds/home.html" class="sidebar-nav-button">
+		  <img src="../../assets/growing_btn.png" alt="Growing Minds" />
 		</a>
-		<a href="../jesterspizza/home.html" class="sidebar-nav-button">
-		  <img src="../assets/jester_btn.png" alt="Jester's Pizza" />
+		<a href="../../jesterspizza/home.html" class="sidebar-nav-button">
+		  <img src="../../assets/jester_btn.png" alt="Jester's Pizza" />
 		</a>
-		<a href="../grayjones/home.html" class="sidebar-nav-button">
-		  <img src="../assets/jones_btn.png" alt="Mayor Gray Jones" />
+		<a href="../../grayjones/home.html" class="sidebar-nav-button">
+		  <img src="../../assets/jones_btn.png" alt="Mayor Gray Jones" />
 		</a>
-		<a href="../nxhealth/nxhealthhome.html" class="sidebar-nav-button">
-		  <img src="../assets/nxh_btn.png" alt="NX Health" />
+		<a href="../../nxhealth/nxhealthhome.html" class="sidebar-nav-button">
+		  <img src="../../assets/nxh_btn.png" alt="NX Health" />
 		</a>
-		<a href="../rooster/rooster.html" class="sidebar-nav-button">
-		  <img src="../assets/rooster_btn.png" alt="Rooster" />
+		<a href="../../rooster/rooster.html" class="sidebar-nav-button">
+		  <img src="../../assets/rooster_btn.png" alt="Rooster" />
 		</a>
-		<a href="../thesecret/secrethome.html" class="sidebar-nav-button">
-		  <img src="../assets/secret_btn.png" alt="The Secret" />
+		<a href="../../thesecret/secrethome.html" class="sidebar-nav-button">
+		  <img src="../../assets/secret_btn.png" alt="The Secret" />
 		</a>
-		<a href="../index.html" class="sidebar-nav-button">
-		  <img src="../assets/torzion_btn.png" alt="Torzion" />
+		<a href="../../index.html" class="sidebar-nav-button">
+		  <img src="../../assets/torzion_btn.png" alt="Torzion" />
 		</a>
 	  </div>
 	</div>
