--- a/allennella/mirrorDEMO/mirrormazedemo_gifs.html
+++ b/allennella/mirrorDEMO/mirrormazedemo_gifs.html
@@ -204,10 +204,10 @@
 		<a href="../../allennella/mirrordemo/splashpage.html" class="sidebar-nav-button">
 		  <img src="../../assets/allen_btn.png" alt="Allen Nella" />
 		</a>
-		<a href="../blueroan/home.html" class="sidebar-nav-button">
+		<a href="../../blueroan/home.html" class="sidebar-nav-button">
 		  <img src="../../assets/blueroan_btn.png" alt="Blue Roan" />
 		</a>
-		<a href="../curtaincall/home.html" class="sidebar-nav-button">
+		<a href="../../curtaincall/home.html" class="sidebar-nav-button">
 		  <img src="../../assets/curtain_btn.png" alt="Curtain Call" />
 		</a>
 		<a href="../../mypetboy/home.html" class="sidebar-nav-button">
