--- a/jesterspizza/delivery.html
+++ b/jesterspizza/delivery.html
@@ -250,7 +250,7 @@
     <img src="../assets/jesterpizzalogo.png" alt="Jester Pizza Logo" height="120" />
     <div class="nav-buttons">
       <a href="delivery.html"><img src="../assets/JesterNavDelivery.png" alt="Delivery" /></a>
-      <a href="#"><img src="../assets/JesterNavMenu.png" alt="Menu" /></a>
+      <a href="menu.html"><img src="../assets/JesterNavMenu.png" alt="Menu" /></a>
       <a href="#"><img src="../assets/JesterNavHistory.png" alt="History" /></a>
       <a href="#"><img src="../assets/JesterNavLocations.png" alt="Locations" /></a>
     </div>
