--- a/growingminds/home.html
+++ b/growingminds/home.html
@@ -137,11 +137,16 @@
       padding: 20px;
     }
     h1 {
-      color: hotpink;
+      background: linear-gradient(to bottom, #ffb6f7, #ed2ead);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      font-family: 'Acme', sans-serif;
       font-size: 2.5em;
       margin: 0;
       padding-bottom: 10px;
       text-align: left;
+      filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.3));
     }
     .underline {
       height: 2px;
