--- a/growingminds/ourgoal.html
+++ b/growingminds/ourgoal.html
@@ -137,11 +137,16 @@
       padding: 20px;
     }
     h1 {
-      color: hotpink;
+      background: linear-gradient(to bottom, #ffb6f7, #ed2ead);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      font-family: 'Acme', sans-serif;
       font-size: 2.5em;
       margin: 0;
       padding-bottom: 10px;
       text-align: left;
+      filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.3));
     }
     .underline {
       height: 2px;
@@ -149,6 +154,14 @@
       width: 100%;
       margin-bottom: 10px;
     }
+		.intro-text {
+  font-family: 'Acme', sans-serif;
+  font-size: 16px;
+  color: black;
+  line-height: 1.6;
+  margin-bottom: 30px;
+  text-align: justify;
+}
   </style>
 </head>
 <body>
@@ -221,8 +234,13 @@
 	  </a>
     </div>
     <div class="content">
-      <h1>Welcome</h1>
+      <h1>Our Goal</h1>
       <div class="underline"></div>
+	  <div class="intro-text">
+  The Growing Minds Learning Center was started to help the children of Rotborough be prepared for the challenges that growing up has to offer. For the last 25 years we’ve offered blossoming young minds the fertile soil they need to take roots in the world of education. Our philosophy has been to provide the fields of our future generation the tools they need to grow from seeds into mighty oaks!
+<br><br><br>
+Our testimonial pages offer a wide selection of true and honest reviews of our prowess as Rotborough’s premier learning academy of young minds! Because at Growing Mind’s we’re not just tutoring children, we’re changing lives!
+</div>
     </div>
   </div>
   
