--- a/growingminds/home.html
+++ b/growingminds/home.html
@@ -154,6 +154,84 @@
       width: 100%;
       margin-bottom: 10px;
     }
+	
+	@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+
+.main-text {
+  font-family: 'Acme', sans-serif;
+  font-size: 14px;
+  color: black;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.main-text .pink-text {
+  color: #f779d6;
+}
+
+.images-container {
+  position: relative;
+  height: 200px;
+  margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rotating-image {
+  position: absolute;
+  border: 4px solid white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease, z-index 0.3s ease;
+  cursor: pointer;
+}
+
+.rotating-image img {
+  display: block;
+  max-width: 150px;
+  height: auto;
+}
+
+.image1 {
+  transform: rotate(-8deg) translateX(-150px);
+  z-index: 1;
+}
+
+.image1:hover {
+  transform: rotate(-5deg) translateX(-150px) scale(1.15);
+  z-index: 10;
+}
+
+.image2 {
+  transform: rotate(3deg) translateX(0px);
+  z-index: 2;
+}
+
+.image2:hover {
+  transform: rotate(1deg) translateX(0px) scale(1.15);
+  z-index: 10;
+}
+
+.image3 {
+  transform: rotate(-12deg) translateX(150px);
+  z-index: 1;
+}
+
+.image3:hover {
+  transform: rotate(-8deg) translateX(150px) scale(1.15);
+  z-index: 10;
+}
+
+.signature-container {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.signature-gif {
+  max-width: 200px;
+  height: auto;
+}
+
   </style>
 </head>
 <body>
@@ -225,10 +303,36 @@
 		<img src="../assets/MenuGoal.png" alt="OurGoal">
 	  </a>
     </div>
-    <div class="content">
-      <h1>Welcome</h1>
-      <div class="underline"></div>
+<div class="content">
+  <h1>Welcome</h1>
+  <div class="underline"></div>
+  
+  <p class="main-text">
+    At <span class="pink-text">Growing Minds Learning Center</span> we are proud to offer a supervised environment tailored to the unique needs of every child. Especially those who may be a bit slow-in-the-mind or simply need a little extra time to catch up to their peers. Our facility is designed to reassure even the most anxious of parents that their child is somewhere, doing something, most likely productive.
+  </p>
+  
+  <div class="images-container">
+    <div class="rotating-image image1">
+      <img src="../assets/gmBts1.jpg" alt="Growing Minds Activity 1">
     </div>
+    <div class="rotating-image image2">
+      <img src="../assets/gmBts2.jpg" alt="Growing Minds Activity 2">
+    </div>
+    <div class="rotating-image image3">
+      <img src="../assets/gmBts3.jpg" alt="Growing Minds Activity 3">
+    </div>
+  </div>
+  
+  <p class="main-text">
+    We strive to create a consistent, low-stimulation atmosphere where children can safely experiment with the basics of social behavior, occasionally string together coherent sentences, and sometimes even make their own decisions (with ample guidance, of course). Our programs aim to gently nudge self-esteem in an upward direction, unless that would be too overwhelming.
+    <br><br>
+    Ultimately, our mission is to produce what we like to call "functionally content young humans" or, in simpler terms, healthy, happy children who won't lick the walls as often as when they first arrived.
+  </p>
+  
+  <div class="signature-container">
+    <img src="../assets/IvySig.gif" alt="Ivy Signature" class="signature-gif">
+  </div>
+</div>
   </div>
   
     <script>
