updated sidebar css and added shared sidebar style css file

--- a/curtaincall/reviews.html
+++ b/curtaincall/reviews.html
@@ -1,243 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="../sidebar-styles.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Curtain Call - Home</title>
   <style>
-    		/* NAVIGATION MENU - Complete working implementation */
-		
 
-	.nav-sidebar {
-	  position: fixed;
-	  top: 50%;
-	  left: -180px;
-	  transform: translateY(-50%);
-	  width: 200px;
-	  background: white;
-	  border: 2px solid #ccc;
-	  border-radius: 0 12px 12px 0;
-	  box-shadow: 3px 0 10px rgba(0,0,0,0.2);
-	  transition: left 0.3s ease-in-out;
-	  z-index: 9999;
-	}
-
-	.nav-sidebar.open {
-	  left: 0;
-	}
-
-	.directory-tab {
-	  position: absolute;
-	  right: -50px;
-	  top: 50%;
-	  transform: translateY(-50%);
-	  width: 50px;
-	  height: 100px;
-	  background: white;
-	  border: 2px solid #ccc;
-	  border-left: none;
-	  border-radius: 0 8px 8px 0;
-	  cursor: pointer;
-	  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  writing-mode: vertical-rl;
-	  font-size: 12px;
-	  font-weight: bold;
-	  color: #666;
-	  box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-	}
-
-	.directory-tab:hover {
-	  background: #f0f0f0;
-	}
-
-	.nav-header {
-	  padding: 10px;
-	  background: #f5f5f5;
-	  border-bottom: 1px solid #ddd;
-	  border-radius: 0 10px 0 0;
-	}
-
-	.return-home {
-	  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  gap: 5px;
-	  padding: 5px 8px;
-	  background: white;
-	  border: 1px solid #ccc;
-	  border-radius: 12px;
-	  text-decoration: none;
-	  color: #555;
-	  font-size: 11px;
-	}
-
-	.return-home:hover {
-	  background: #e8e8e8;
-	}
-
-	.arrow-left {
-	  width: 0;
-	  height: 0;
-	  border-top: 3px solid transparent;
-	  border-bottom: 3px solid transparent;
-	  border-right: 5px solid #555;
-	}
-
-	/* RENAMED TO AVOID CONFLICT - was .nav-buttons */
-	.sidebar-nav-buttons {
-	  padding: 8px;
-	  max-height: 400px;
-	  overflow-y: auto;
-	}
-
-	/* RENAMED TO AVOID CONFLICT - was .nav-button */
-	.sidebar-nav-button {
-	  display: block;
-	  margin-bottom: 6px;
-	  transition: transform 0.2s ease;
-	}
-
-	.sidebar-nav-button:hover {
-	  transform: scale(1.02);
-	}
-
-	.sidebar-nav-button img {
-	  width: 100%;
-	  height: auto;
-	  border-radius: 4px;
-	}
-	
-			  /* TIME MACHINE SIDEBAR - Right side */
-		.time-sidebar {
-		  position: fixed;
-		  top: 50%;
-		  right: -220px;
-		  transform: translateY(-50%);
-		  width: 240px;
-		  background: white;
-		  border: 2px solid #ccc;
-		  border-radius: 12px 0 0 12px;
-		  box-shadow: -3px 0 10px rgba(0,0,0,0.2);
-		  transition: right 0.3s ease-in-out;
-		  z-index: 9998;
-		}
-
-		.time-sidebar.open {
-		  right: 0;
-		}
-
-		.time-tab {
-		  position: absolute;
-		  left: -50px;
-		  top: 50%;
-		  transform: translateY(-50%);
-		  width: 50px;
-		  height: 100px;
-		  background: white;
-		  border: 2px solid #ccc;
-		  border-right: none;
-		  border-radius: 8px 0 0 8px;
-		  cursor: pointer;
-		  display: flex;
-		  align-items: center;
-		  justify-content: center;
-		  writing-mode: vertical-lr;
-		  font-size: 12px;
-		  font-weight: bold;
-		  color: #666;
-		  box-shadow: -2px 0 5px rgba(0,0,0,0.1);
-		}
-
-		.time-tab:hover {
-		  background: #f0f0f0;
-		}
-
-		.time-header {
-		  padding: 10px;
-		  background: #f5f5f5;
-		  border-bottom: 1px solid #ddd;
-		  border-radius: 10px 0 0 0;
-		  text-align: center;
-		}
-
-		.time-header h3 {
-		  margin: 0;
-		  font-size: 14px;
-		  color: #333;
-		}
-
-		.current-date {
-		  font-size: 12px;
-		  color: #666;
-		  margin: 5px 0;
-		}
-
-		.time-content {
-		  padding: 15px;
-		}
-
-		.version-dropdown {
-		  width: 100%;
-		  padding: 8px;
-		  margin-bottom: 15px;
-		  border: 1px solid #ccc;
-		  border-radius: 4px;
-		  font-size: 12px;
-		}
-
-		.calendar-container {
-		  background: #f9f9f9;
-		  border: 1px solid #ddd;
-		  border-radius: 4px;
-		  padding: 10px;
-		}
-
-		.calendar-header {
-		  text-align: center;
-		  font-weight: bold;
-		  font-size: 12px;
-		  margin-bottom: 8px;
-		  color: #333;
-		}
-
-		.calendar-grid {
-		  display: grid;
-		  grid-template-columns: repeat(7, 1fr);
-		  gap: 2px;
-		}
-
-		.calendar-day-header {
-		  text-align: center;
-		  font-size: 10px;
-		  font-weight: bold;
-		  color: #666;
-		  padding: 2px;
-		}
-
-		.calendar-day {
-		  text-align: center;
-		  font-size: 10px;
-		  padding: 3px;
-		  min-height: 20px;
-		  display: flex;
-		  align-items: center;
-		  justify-content: center;
-		}
-
-		.calendar-day.current {
-		  background: #416cff;
-		  color: white;
-		  border-radius: 2px;
-		  font-weight: bold;
-		}
-
-		.calendar-day.other-month {
-		  color: #ccc;
-		}
-	
-	
     @font-face {
       font-family: 'Bebop';
       src: url('../assets/BEBOP.TTF') format('truetype');
