--- a/growingminds/faq.html
+++ b/growingminds/faq.html
@@ -1,113 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="../sidebar-styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Growing Minds - FAQ</title>
   <style>
-    		/* NAVIGATION MENU - Complete working implementation */
-		
-
-	.nav-sidebar {
-	  position: fixed;
-	  top: 50%;
-	  left: -180px;
-	  transform: translateY(-50%);
-	  width: 200px;
-	  background: white;
-	  border: 2px solid #ccc;
-	  border-radius: 0 12px 12px 0;
-	  box-shadow: 3px 0 10px rgba(0,0,0,0.2);
-	  transition: left 0.3s ease-in-out;
-	  z-index: 9999;
-	}
-
-	.nav-sidebar.open {
-	  left: 0;
-	}
-
-	.directory-tab {
-	  position: absolute;
-	  right: -50px;
-	  top: 50%;
-	  transform: translateY(-50%);
-	  width: 50px;
-	  height: 100px;
-	  background: white;
-	  border: 2px solid #ccc;
-	  border-left: none;
-	  border-radius: 0 8px 8px 0;
-	  cursor: pointer;
-	  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  writing-mode: vertical-rl;
-	  font-size: 12px;
-	  font-weight: bold;
-	  color: #666;
-	  box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-	}
-
-	.directory-tab:hover {
-	  background: #f0f0f0;
-	}
-
-	.nav-header {
-	  padding: 10px;
-	  background: #f5f5f5;
-	  border-bottom: 1px solid #ddd;
-	  border-radius: 0 10px 0 0;
-	}
-
-	.return-home {
-	  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  gap: 5px;
-	  padding: 5px 8px;
-	  background: white;
-	  border: 1px solid #ccc;
-	  border-radius: 12px;
-	  text-decoration: none;
-	  color: #555;
-	  font-size: 11px;
-	}
-
-	.return-home:hover {
-	  background: #e8e8e8;
-	}
-
-	.arrow-left {
-	  width: 0;
-	  height: 0;
-	  border-top: 3px solid transparent;
-	  border-bottom: 3px solid transparent;
-	  border-right: 5px solid #555;
-	}
-
-	/* RENAMED TO AVOID CONFLICT - was .nav-buttons */
-	.sidebar-nav-buttons {
-	  padding: 8px;
-	  max-height: 400px;
-	  overflow-y: auto;
-	}
-
-	/* RENAMED TO AVOID CONFLICT - was .nav-button */
-	.sidebar-nav-button {
-	  display: block;
-	  margin-bottom: 6px;
-	  transition: transform 0.2s ease;
-	}
-
-	.sidebar-nav-button:hover {
-	  transform: scale(1.02);
-	}
-
-	.sidebar-nav-button img {
-	  width: 100%;
-	  height: auto;
-	  border-radius: 4px;
-	}
+ 
 	
     @font-face {
       font-family: 'Acme';
